--- a/contactUs.html
+++ b/contactUs.html
@@ -2,30 +2,39 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>ToxicTravels - Home</title>
+        <title>ToxicTravels - Contact Us</title>
         <link rel="stylesheet" href="./toxic_travels.css">
     </head>
     <body>
-        <nav id="topNav">
+        <nav id="topNav2">
             <h1>ToxicTravels</h1>
             <ul>
               <li><a href="./index.html" id="home">Home</a></li>
               <li><a href="./aboutUs.html" id="about">About Us</a></li>
               <li><a href="./contactUs.html" id="contact">Contact Us</a></li>
-              <li><input type="text" id="searchBar" placeholder="Enter a destination or keyword">  </li>
-              <li><button id='searchBtn'>Search</button></li>
-              <li><button id='clearBtn'>Clear</button></li>
             </ul>
         </nav>
 
-        <main>
-            <h1>TRAVEL TO <br>GREAT PLACES</h1>
-            <p>Discover, compare, and book your perfect trip in one place. <br>
-                We help you find the best flights, hotels, and vacation packages with easy, secure, and fast booking. <br>Travel worldwide with confidence and start your next adventure today.
-            </p>
+        <main id="aboutMain">
+            <h1>CONTACT US</h1>
+            <div>
+                <p>Get in touch...</p>
+            </div>
 
+            <div>
+                <form action="">
+                    <h3>Name</h3>
+                    <textarea id="name" cols="30" rows="1"></textarea>
+                    <h3>Email</h3>
+                    <textarea id="email" cols="30" rows="1"></textarea>
+                    <h3>Message</h3>
+                    <textarea id="name" cols="30" rows="10"></textarea> <br>
+                    <button id="sendBtn">Send</button>
+                </form>
+            </div>
+            
         </main>
-        <nav id="sidebar">
+        <nav id="sidebar3">
             <a href="https://es-la.facebook.com/"><svg xmlns="http://www.w3.org/2000/svg"  width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
                 <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"/>
             </svg> <br></a>
@@ -39,7 +48,6 @@
                 <path d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.01 2.01 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.01 2.01 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31 31 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.01 2.01 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A100 100 0 0 1 7.858 2zM6.4 5.209v4.818l4.157-2.408z"/>
             </svg></a>
         </nav>
-        <div id="result"></div>
     </body>
     <script src="./toxic_travels.js"></script>
 </html>
