Cambios en aboutUs

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -17,46 +17,48 @@
 
         <main id="aboutMain">
             <h1>ABOUT US</h1>
-            <div>
+            <div id="aboutDiv">
                 <p>We are a travel company dedicated to helping people explore the world with confidence, comfort, and unforgettable experiences. Through technology, expert support, and trusted partnerships, we make travel planning simple, accessible, and enjoyable for everyone.</p>
             </div>
             <br>
-            <div>
+            <div id="aboutDiv">
                 <h3>Our Mission</h3>
                 <p>Our mission is to provide travelers with seamless access to the best travel options, empowering them to discover new destinations while enjoying safe, affordable, and stress-free journeys.</p>
             </div>
             <br>
-            <div>
+            <div id="aboutDiv">
                 <h3>Our Purpose</h3>
                 <p>We exist to connect people with the world. We believe travel changes lives, builds understanding, and creates lifelong memories. Our purpose is to make those experiences available to everyone.</p>
             </div>
             <br>
-            <div>
+            <div id="aboutDiv">
                 <h3>Our Values</h3>
                 <ul>
-                    <li><b>Customer First:</b> We always put our travelers’ needs at the center of everything we do.</li>
-                    <li><b>Trust & Transparency:</b> We offer honest pricing, clear policies, and reliable services.</li>
-                    <li><b>Innovation:</b>We use technology to simplify travel and improve the booking experience.</li>
-                    <li><b>Integrity:</b>We operate with honesty, responsibility, and respect.</li>
-                    <li><b>Passion for Travel:</b>We love what we do, and it shows in the way we serve our customers.</li>
+                    <li><p><b>Customer First:</b> We always put our travelers’ needs at the center of everything we do.</p></li>
+                    <li><p><b>Trust & Transparency:</b> We offer honest pricing, clear policies, and reliable services.</p></li>
+                    <li><p><b>Innovation:</b>We use technology to simplify travel and improve the booking experience.</p></li>
+                    <li><p><b>Integrity:</b>We operate with honesty, responsibility, and respect.</p></li>
+                    <li><p><b>Passion for Travel:</b>We love what we do, and it shows in the way we serve our customers.</p></li>
                 </ul>
             </div>
             <br>
             <h1>Our Team</h1>
-            <div id="ourDiv">
-                <h3>John Doe</h3>
-                <p>John is responsible for...</p>
-                <button>CEO</button>
-            </div>
-            <div id="ourDiv">
-                <h3>Celina Thomas</h3>
-                <p>Celina is responsible for...</p>
-                <button>Team Lead</button>
-            </div>
-            <div id="ourDiv">
-                <h3>Mike Tysen</h3>
-                <p>Mike is responsible for...</p>
-                <button>Delivery Head</button>
+            <div id="outterOurDiv">
+                <div id="ourDiv">
+                    <h3>John Doe</h3>
+                    <p>John is responsible for...</p>
+                    <button id="ourButton">CEO</button>
+                </div>
+                <div id="ourDiv">
+                    <h3>Celina Thomas</h3>
+                    <p>Celina is responsible for...</p>
+                    <button id="ourButton">Team Lead</button>
+                </div>
+                <div id="ourDiv">
+                    <h3>Mike Tysen</h3>
+                    <p>Mike is responsible for...</p>
+                    <button id="ourButton">Delivery Head</button>
+                </div>
             </div>
         </main>
         <nav id="sidebar2">
