Finalización de css

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -34,11 +34,11 @@
             <div id="aboutDiv">
                 <h3>Our Values</h3>
                 <ul>
-                    <li><p><b>Customer First:</b> We always put our travelers’ needs at the center of everything we do.</p></li>
-                    <li><p><b>Trust & Transparency:</b> We offer honest pricing, clear policies, and reliable services.</p></li>
-                    <li><p><b>Innovation:</b>We use technology to simplify travel and improve the booking experience.</p></li>
-                    <li><p><b>Integrity:</b>We operate with honesty, responsibility, and respect.</p></li>
-                    <li><p><b>Passion for Travel:</b>We love what we do, and it shows in the way we serve our customers.</p></li>
+                    <li><p><b>■ Customer First:</b> We always put our travelers’ needs at the center of everything we do.</p></li>
+                    <li><p><b>■ Trust & Transparency:</b> We offer honest pricing, clear policies, and reliable services.</p></li>
+                    <li><p><b>■ Innovation:</b>We use technology to simplify travel and improve the booking experience.</p></li>
+                    <li><p><b>■ Integrity:</b>We operate with honesty, responsibility, and respect.</p></li>
+                    <li><p><b>■ Passion for Travel:</b>We love what we do, and it shows in the way we serve our customers.</p></li>
                 </ul>
             </div>
             <br>
