--- a/contactUs.html
+++ b/contactUs.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="./toxic_travels.css">
     </head>
     <body>
-        <nav id="topNav2">
+        <nav id="topNav3">
             <h1>ToxicTravels</h1>
             <ul>
               <li><a href="./index.html" id="home">Home</a></li>
@@ -15,19 +15,15 @@
             </ul>
         </nav>
 
-        <main id="aboutMain">
+        <main id="contactMain">
             <h1>CONTACT US</h1>
             <div>
-                <p>Get in touch...</p>
-            </div>
-
-            <div>
                 <form action="">
-                    <h3>Name</h3>
+                    <h3>Name:</h3>
                     <textarea id="name" cols="30" rows="1"></textarea>
-                    <h3>Email</h3>
+                    <h3>Email:</h3>
                     <textarea id="email" cols="30" rows="1"></textarea>
-                    <h3>Message</h3>
+                    <h3>Message:</h3>
                     <textarea id="name" cols="30" rows="10"></textarea> <br>
                     <button id="sendBtn">Send</button>
                 </form>
